# fde-cli

./: .gitignore  README.md  SKILL.md  pyproject.toml  run_tests.sh
docs/: integration-guide.md
examples/: fde-full-flow-demo.md
fde/: __init__.py  cli.py  deliverable.py  engine.py  llm.py  mcp_tools.py  phases.py
tests/: test_brief_mode.py  test_deliverable.py  test_engine.py  test_integration.py  test_mcp_tools.py  test_phases.py
